compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unexpected_arg_with_label_shorthand.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n    fn id(x) { x }\n    fn y() {\n        let x = 4\n        id(x:)\n    }\n"
---
----- SOURCE CODE

    fn id(x) { x }
    fn y() {
        let x = 4
        id(x:)
    }


----- ERROR
error: Unexpected labelled argument
  ┌─ /src/one/two.gleam:5:12
  │
5 │         id(x:)
  │            ^^

This argument has been given a label but the function does
not expect any. Please remove the label `x`.
